[gd_scene load_steps=8 format=2]

[ext_resource path="res://SnowballFight/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/SnowballGame/Enemy1.png" type="Texture" id=2]
[ext_resource path="res://Assets/SnowballGame/Enemy2.png" type="Texture" id=3]
[ext_resource path="res://Assets/SnowballGame/Enemy3.png" type="Texture" id=4]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0, 1, 0.109804, 1 )

[sub_resource type="CapsuleMesh" id=2]
material = SubResource( 1 )

[sub_resource type="CapsuleShape" id=3]
radius = 1.93279

[node name="Enemy" type="KinematicBody" groups=[
"Enemy",
]]
input_capture_on_drag = true
collision_layer = 4
collision_mask = 9
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Enemy1" type="Sprite3D" parent="."]
transform = Transform( 15, 0, 0, 0, 15, 0, 0, 0, 1, 0, 0, 0 )
billboard = 2
texture = ExtResource( 2 )

[node name="Enemy2" type="Sprite3D" parent="."]
transform = Transform( 15, 0, 0, 0, 15, 0, 0, 0, 1, 0, 0, 0 )
visible = false
billboard = 2
texture = ExtResource( 3 )

[node name="Enemy3" type="Sprite3D" parent="."]
transform = Transform( 15, 0, 0, 0, 15, 0, 0, 0, 1, 0, 0, 0 )
visible = false
billboard = 2
texture = ExtResource( 4 )

[node name="Eyes" type="Spatial" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[node name="QueueTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="QueueTimer" to="." method="_on_QueueTimer_timeout"]
